syntax = "proto3";

package frontend.cart;

import "api.proto";

option go_package = "/frontend/cart";

message Empty {}

message AddCartReq {
  uint32 product_id = 1 [(api.form) = "productId"];
  int32 product_num = 2 [(api.form) = "productNum"];
}

service CartService {
  rpc AddCartItem(AddCartReq) returns (Empty) {
    option (api.post) = "/cart";
  }
  rpc GetCart(Empty) returns (Empty) {
    option (api.get) = "/cart";
  }
}