syntax = "proto3";

package frontend.checkout;

option go_package = "frontend/checkout";

import "api.proto";

message Empty {}

message CheckoutReq {
    string email = 1 [(api.form) = "email"];
    string firstname = 2 [(api.form) = "firstname"];
    string lastname = 3 [(api.form) = "lastname"];
    string street = 4 [(api.form) = "street"];
    string zipcode = 5 [(api.form) = "zipcode"];
    string province = 6 [(api.form) = "province"];
    string country = 7 [(api.form) = "country"];
    string city = 8 [(api.form) = "city"];
    string card_num = 9 [(api.form) = "cartNum"];
    int32 expiration_month = 10 [(api.form) = "expiration_month"];
    int32 expiration_year = 11 [(api.form) = "expiration_yead"];
    int32 cvv = 12 [(api.form) = "cvv"];
    string payment = 13 [(api.form) = "payment"]; 
}

service CheckoutService {
    rpc Checkout(Empty) returns (Empty) {
        option (api.get) = "/checkout";
    }
    rpc CheckoutWaiting(CheckoutReq) returns (Empty) {
        option (api.post) = "/checkout/waiting";
    }
    rpc CheckoutResult(Empty) returns (Empty) {
        option (api.get) = "/checkout/result";
    }
}